--- a/cas-server-webapp/pom.xml
+++ b/cas-server-webapp/pom.xml
@@ -99,6 +99,11 @@
   </dependencies>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -113,6 +118,11 @@
               <includes>
                 <include>**/web.xml</include>
               </includes>
+            </resource>
+            <resource>
+              <directory>src/main/resources-${env}</directory>
+              <filtering>true</filtering>
+              <targetPath>WEB-INF</targetPath>
             </resource>
           </webResources>
         </configuration>
@@ -129,6 +139,29 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>local</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <env>local</env>
+      </properties>
+    </profile>
+    <profile>
+      <id>dev</id>
+      <properties>
+        <env>dev</env>
+      </properties>
+    </profile>
+    <profile>
+      <id>release</id>
+      <properties>
+        <env>release</env>
+      </properties>
+    </profile>
+  </profiles>
 
   <properties>
     <cs.dir>${project.parent.basedir}</cs.dir>
